Exclude detekt task from Gradle build in CI workflow
This commit updates the CI workflow to exclude the detekt task during the Gradle build process. This change improves the build time by skipping static code analysis, which is not critical for every build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         echo "CONTENTFUL_ACCESS_TOKEN=${{ secrets.CONTENTFUL_ACCESS_TOKEN }}" >> local.properties
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build -x detekt
 
     - name: Run tests
       run: ./gradlew test
