--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,12 @@ name: Android CI
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - 'README.md'
   pull_request:
     branches: [ main, develop ]
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   build:
